# genbank_seq_downloader

./: README.md  config.yml  download_seq.py  pyproject.toml
